schema/testdata/validation_enum_default_gibberish/schema.keel
model Post {
    fields {
        type PostType @default(Gibberish)
    }
}

enum PostType {
    Draft
    Published
}
