schema/testdata/errors/enum_default_gibberish.keel
model Post {
    fields {
        //expect-error:32:41:AttributeExpressionError:unknown identifier 'Gibberish'
        type PostType @default(Gibberish)
    }
}

enum PostType {
    Draft
    Published
}
